--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Server Configuration
-server.port=8080
+server.port=${PORT:8080}
 
 # Database Configuration (H2 For Development)
 spring.datasource.url=jdbc:h2:mem:testdb
